mdcfg (0.22) UNRELEASED; urgency=low

  * Martin Michlmayr
    - Use a better way to find out which devices are available as
      spare devices.  Closes: #250771.

 -- Martin Michlmayr <tbm@cyrius.com>  Thu, 27 May 2004 02:03:37 -0300

mdcfg (0.21) unstable; urgency=low

  * Martin Michlmayr
    - When creating a new RAID device using the 2.6 kernel, don't show
      partitions which are already part of an MD device.  Closes:
      #250973.
  * Updated translations:
    - Bosnian (bs.po) by Safir Šećerović
    - Korean (ko.po) by Changwoo Ryu
    - Slovenian (sl.po) by Jure Čuhalev

 -- Martin Michlmayr <tbm@cyrius.com>  Thu, 27 May 2004 01:59:25 -0300

mdcfg (0.20) unstable; urgency=low

  * Joey Hess
    - Add a prebaseconfig script to hack /etc/mdadm/debian.conf to
      turn on AUTOSTART so the raid will be available at boot.
      Closes: #250427
  * Joshua Kwan
    - Add Joey to Uploaders.
  * Updated translations:
    - Italian (it.po) by Stefano Melchior

 -- Joey Hess <joeyh@debian.org>  Mon, 24 May 2004 18:12:39 -0300

mdcfg (0.19) unstable; urgency=medium

  * Martin Michlmayr
    - Run mdadm --create with the -R parameter so it won't hang waiting for
      input when the partition has an existing filesystem.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Jordi Mallach
    - Finnish (fi.po) by Tapio Lehtonen
    - Norwegian (nb.po) by Knut Yrvin

 -- Martin Michlmayr <tbm@cyrius.com>  Mon, 24 May 2004 02:55:11 +0100

mdcfg (0.18) unstable; urgency=low

  * Martin Michlmayr
    - Print a debconf error if you try to delete an MD device when
      none exist.
    - Call find-partitions with the new --ignore-fstype argument in order
      to see new RAID partitions which have an existing filesystem.
    - Make the search for RAID partitions slightly more reliable.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul