@@ -3,6 +3,8 @@ mdcfg (0.22) UNRELEASED; urgency=low
   * Martin Michlmayr
     - Use a better way to find out which devices are available as
       spare devices.  Closes: #250771.
+    - Use a better way to make sure that enough spare devices have
+      been selected.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Thu, 27 May 2004 02:03:37 -0300
 
